k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-deployment
  name: app-deployment
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values: 
                - ivolve-app
            topologyKey: kubernetes.io/hostname
      containers:
      - image: nginx:alpine
        name: application
        ports:
        - containerPort: 80
        resources: {}
status: {}
