k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-service
  name: app-service
  namespace: ivolve
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ivolve-app
  type: ClusterIP
status:
  loadBalancer: {}
